Font icons added in edi page

--- a/BolWallet/Views/CreateEdiPage.xaml
+++ b/BolWallet/Views/CreateEdiPage.xaml
@@ -9,6 +9,7 @@
     xmlns:editors="clr-namespace:DevExpress.Maui.Editors;assembly=DevExpress.Maui.Editors"
     xmlns:localConverters="clr-namespace:BolWallet.Converters"
     xmlns:models="clr-namespace:BolWallet.Models"
+    xmlns:helpers="clr-namespace:BolWallet.Helpers"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
 	xmlns:local="clr-namespace:BolWallet;assembly=BolWallet"
     x:Name="This"
@@ -24,8 +25,25 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0"  Text="Identity Card" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="IdentityCardPath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="IdentityCardPath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+			
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="IdentityCardPath" HorizontalOptions="Center">
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Upload_file}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="IdentityCardPath"   HorizontalOptions="Center" >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Photo_camera}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
 			</StackLayout>
 			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.IdentityCardPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
@@ -38,8 +56,24 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0"  Text="Driving License" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="DrivingLicencePath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="DrivingLicencePath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="DrivingLicencePath"   HorizontalOptions="Center" >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Upload_file}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="DrivingLicencePath"  BackgroundColor="#ffffff" HorizontalOptions="Center">
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Photo_camera}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
 			</StackLayout>
 			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.DrivingLicencePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
@@ -52,8 +86,24 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0"  Text="Passport" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="PassportPath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="PassportPath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="PassportPath"    HorizontalOptions="Center" >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Upload_file}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="PassportPath"   HorizontalOptions="Center"   >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Photo_camera}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
 			</StackLayout>
 			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.PassportPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
@@ -66,8 +116,24 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0"  Text="Photo" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="Photo"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="Photo"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="Photo"   HorizontalOptions="Center" >
+					<ImageButton.Source>
+					<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Upload_file}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="Photo"  HorizontalOptions="Center"  >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Photo_camera}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
 			</StackLayout>
 			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.PhotoPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
@@ -79,8 +145,24 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0"  Text="Nin Certificate" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="NinCertificatePath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="NinCertificatePath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="NinCertificatePath"  HorizontalOptions="Center" >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Upload_file}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="NinCertificatePath" HorizontalOptions="Center" >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Photo_camera}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
 			</StackLayout>
 			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.NinCertificatePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
@@ -92,8 +174,24 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0"  Text="Birth Certificate" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="BirthCertificatePath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="BirthCertificatePath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="BirthCertificatePath" HorizontalOptions="Center" >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Upload_file}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="BirthCertificatePath"    HorizontalOptions="Center"   >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Photo_camera}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
 			</StackLayout>
 			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.BirthCertificatePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
@@ -105,8 +203,24 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0"  Text="Telephone Bill" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="TelephoneBillPath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="TelephoneBillPath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="TelephoneBillPath"  HorizontalOptions="Center" >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Upload_file}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="TelephoneBillPath"   HorizontalOptions="Center"  >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Photo_camera}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
 			</StackLayout>
 			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.TelephoneBillPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
@@ -118,8 +232,24 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0"  Text="Other" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="OtherPath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="OtherPath"  Source="camera.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="OtherPath"  HorizontalOptions="Center" >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Upload_file}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="OtherPath"   HorizontalOptions="Center"  >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Photo_camera}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
 			</StackLayout>
 			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.OtherPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
@@ -131,8 +261,24 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0"  Text="Voice" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="VoicePath"  Source="plus.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"/>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="VoicePath"  Source="record.png" BackgroundColor="#ffffff" HorizontalOptions="Center" HeightRequest="30" WidthRequest="30"  />
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="VoicePath"   HorizontalOptions="Center"  >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Upload_file}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
+				<ImageButton   Command="{Binding RecordAudioCommand}" HorizontalOptions="Center"  >
+					<ImageButton.Source>
+						<FontImageSource 
+							FontFamily="MaterialIconsRegular"
+							Glyph="{x:Static helpers:Icons.Record_voice_over}"
+							Color="Black"
+                         />
+					</ImageButton.Source>
+				</ImageButton>
 			</StackLayout>
 			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.TelephoneBillPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
