Change text color - edi

--- a/BolWallet/Views/CreateEdiPage.xaml
+++ b/BolWallet/Views/CreateEdiPage.xaml
@@ -23,9 +23,8 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-			<Label Margin="10,0,10,0"  Text="Identity Card" FontSize="18" VerticalOptions="Center" />
+			<Label Margin="10,0,10,0" TextColor="Black" Text="Identity Card" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-			
 				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="IdentityCardPath" HorizontalOptions="Center">
 					<ImageButton.Source>
 						<FontImageSource 
@@ -45,7 +44,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.IdentityCardPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.IdentityCardPath}"   HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
 		</Grid>
 		<Grid Margin="0,0,0,10" >
@@ -54,7 +53,7 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-			<Label Margin="10,0,10,0"  Text="Driving License" FontSize="18" VerticalOptions="Center" />
+			<Label Margin="10,0,10,0" TextColor="Black" Text="Driving License" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
 				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="DrivingLicencePath"   HorizontalOptions="Center" >
 					<ImageButton.Source>
@@ -75,7 +74,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.DrivingLicencePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.DrivingLicencePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
 		</Grid>
 		<Grid Margin="0,0,0,10" >
@@ -84,7 +83,7 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-			<Label Margin="10,0,10,0"  Text="Passport" FontSize="18" VerticalOptions="Center" />
+			<Label Margin="10,0,10,0" TextColor="Black" Text="Passport" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
 				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="PassportPath"    HorizontalOptions="Center" >
 					<ImageButton.Source>
@@ -105,7 +104,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.PassportPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.PassportPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
 		</Grid>
 		<Grid Margin="0,0,0,10" >
@@ -114,9 +113,9 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-			<Label Margin="10,0,10,0"  Text="Photo" FontSize="18" VerticalOptions="Center" />
+			<Label Margin="10,0,10,0" TextColor="Black" Text="Photo" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="Photo"   HorizontalOptions="Center" >
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="PhotoPath"   HorizontalOptions="Center" >
 					<ImageButton.Source>
 					<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -125,7 +124,7 @@
                          />
 					</ImageButton.Source>
 				</ImageButton>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="Photo"  HorizontalOptions="Center"  >
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="PhotoPath"  HorizontalOptions="Center"  >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -135,7 +134,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.PhotoPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.PhotoPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Grid Margin="0,0,0,10" >
 			<Grid.ColumnDefinitions>
@@ -143,7 +142,7 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-			<Label Margin="10,0,10,0"  Text="Nin Certificate" FontSize="18" VerticalOptions="Center" />
+			<Label Margin="10,0,10,0" TextColor="Black" Text="Nin Certificate" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
 				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="NinCertificatePath"  HorizontalOptions="Center" >
 					<ImageButton.Source>
@@ -164,7 +163,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.NinCertificatePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.NinCertificatePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Grid Margin="0,0,0,10" >
 			<Grid.ColumnDefinitions>
@@ -172,7 +171,7 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-			<Label Margin="10,0,10,0"  Text="Birth Certificate" FontSize="18" VerticalOptions="Center" />
+			<Label Margin="10,0,10,0" TextColor="Black" Text="Birth Certificate" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
 				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="BirthCertificatePath" HorizontalOptions="Center" >
 					<ImageButton.Source>
@@ -193,7 +192,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.BirthCertificatePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.BirthCertificatePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Grid Margin="0,0,0,10" >
 			<Grid.ColumnDefinitions>
@@ -201,7 +200,7 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-			<Label Margin="10,0,10,0"  Text="Telephone Bill" FontSize="18" VerticalOptions="Center" />
+			<Label Margin="10,0,10,0" TextColor="Black" Text="Telephone Bill" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
 				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="TelephoneBillPath"  HorizontalOptions="Center" >
 					<ImageButton.Source>
@@ -222,7 +221,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.TelephoneBillPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.TelephoneBillPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Grid Margin="0,0,0,10" >
 			<Grid.ColumnDefinitions>
@@ -230,7 +229,7 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-			<Label Margin="10,0,10,0"  Text="Other" FontSize="18" VerticalOptions="Center" />
+			<Label Margin="10,0,10,0" TextColor="Black" Text="Other" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
 				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="OtherPath"  HorizontalOptions="Center" >
 					<ImageButton.Source>
@@ -251,7 +250,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.OtherPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.OtherPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Grid Margin="0,0,0,10" >
 			<Grid.ColumnDefinitions>
@@ -259,7 +258,7 @@
 				<ColumnDefinition Width="Auto"/>
 				<ColumnDefinition Width="Auto"/>
 			</Grid.ColumnDefinitions>
-			<Label Margin="10,0,10,0"  Text="Voice" FontSize="18" VerticalOptions="Center" />
+			<Label Margin="10,0,10,0" TextColor="Black" Text="Voice" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
 				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="VoicePath"   HorizontalOptions="Center"  >
 					<ImageButton.Source>
@@ -280,7 +279,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.TelephoneBillPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.TelephoneBillPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Button   Grid.Column="1" VerticalOptions="EndAndExpand" Text="Submit" BackgroundColor="#063289" Margin="20, 0, 20, 20"  HorizontalOptions="Fill"  Command="{Binding SubmitCommand}"/>
 	</StackLayout>
