--- a/BolWallet/Views/CreateEdiPage.xaml
+++ b/BolWallet/Views/CreateEdiPage.xaml
@@ -25,7 +25,7 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0" TextColor="Black" Text="Identity Card" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="IdentityCardPath" HorizontalOptions="Center">
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="IdentityCard" HorizontalOptions="Center">
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -34,7 +34,7 @@
                          />
 					</ImageButton.Source>
 				</ImageButton>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="IdentityCardPath"   HorizontalOptions="Center" >
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="IdentityCard"   HorizontalOptions="Center" >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -44,7 +44,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.IdentityCardPath}"   HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.IdentityCard}"   HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
 		</Grid>
 		<Grid Margin="0,0,0,10" >
@@ -55,7 +55,7 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0" TextColor="Black" Text="Driving License" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="DrivingLicencePath"   HorizontalOptions="Center" >
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="DrivingLicense" HorizontalOptions="Center" >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -64,7 +64,7 @@
                          />
 					</ImageButton.Source>
 				</ImageButton>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="DrivingLicencePath"  BackgroundColor="#ffffff" HorizontalOptions="Center">
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="DrivingLicense" BackgroundColor="#ffffff" HorizontalOptions="Center">
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -74,7 +74,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.DrivingLicencePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.DrivingLicense}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
 		</Grid>
 		<Grid Margin="0,0,0,10" >
@@ -85,7 +85,7 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0" TextColor="Black" Text="Passport" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="PassportPath"    HorizontalOptions="Center" >
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="Passport" HorizontalOptions="Center">
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -94,7 +94,7 @@
                          />
 					</ImageButton.Source>
 				</ImageButton>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="PassportPath"   HorizontalOptions="Center"   >
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="Passport" HorizontalOptions="Center">
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -104,7 +104,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.PassportPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.Passport}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 			<Label Text="*Required" Grid.Column="3" HorizontalOptions="Center"  TextColor="Red"></Label>
 		</Grid>
 		<Grid Margin="0,0,0,10" >
@@ -115,16 +115,16 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0" TextColor="Black" Text="Photo" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="PhotoPath"   HorizontalOptions="Center" >
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="Photo"   HorizontalOptions="Center" >
 					<ImageButton.Source>
-					<FontImageSource 
+						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
 							Glyph="{x:Static helpers:Icons.Upload_file}"
 							Color="Black"
                          />
 					</ImageButton.Source>
 				</ImageButton>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="PhotoPath"  HorizontalOptions="Center"  >
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="Photo"  HorizontalOptions="Center"  >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -134,7 +134,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.PhotoPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.Photo}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Grid Margin="0,0,0,10" >
 			<Grid.ColumnDefinitions>
@@ -144,7 +144,7 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0" TextColor="Black" Text="Nin Certificate" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="NinCertificatePath"  HorizontalOptions="Center" >
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="NinCertificate"  HorizontalOptions="Center" >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -153,7 +153,7 @@
                          />
 					</ImageButton.Source>
 				</ImageButton>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="NinCertificatePath" HorizontalOptions="Center" >
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="NinCertificate" HorizontalOptions="Center" >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -163,7 +163,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.NinCertificatePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.NinCertificate}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Grid Margin="0,0,0,10" >
 			<Grid.ColumnDefinitions>
@@ -173,7 +173,7 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0" TextColor="Black" Text="Birth Certificate" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="BirthCertificatePath" HorizontalOptions="Center" >
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="BirthCertificate" HorizontalOptions="Center" >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -182,7 +182,7 @@
                          />
 					</ImageButton.Source>
 				</ImageButton>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="BirthCertificatePath"    HorizontalOptions="Center"   >
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="BirthCertificate"    HorizontalOptions="Center"   >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -192,7 +192,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.BirthCertificatePath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.BirthCertificate}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Grid Margin="0,0,0,10" >
 			<Grid.ColumnDefinitions>
@@ -202,7 +202,7 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0" TextColor="Black" Text="Telephone Bill" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="TelephoneBillPath"  HorizontalOptions="Center" >
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="TelephoneBill"  HorizontalOptions="Center" >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -211,7 +211,7 @@
                          />
 					</ImageButton.Source>
 				</ImageButton>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="TelephoneBillPath"   HorizontalOptions="Center"  >
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="TelephoneBill"   HorizontalOptions="Center"  >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -221,7 +221,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.TelephoneBillPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.TelephoneBill}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Grid Margin="0,0,0,10" >
 			<Grid.ColumnDefinitions>
@@ -231,7 +231,7 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0" TextColor="Black" Text="Other" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="OtherPath"  HorizontalOptions="Center" >
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="Other"  HorizontalOptions="Center" >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -240,7 +240,7 @@
                          />
 					</ImageButton.Source>
 				</ImageButton>
-				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="OtherPath"   HorizontalOptions="Center"  >
+				<ImageButton   Command="{Binding TakePhotoCommand}" CommandParameter="Other"   HorizontalOptions="Center"  >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -250,7 +250,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.OtherPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.Other}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Grid Margin="0,0,0,10" >
 			<Grid.ColumnDefinitions>
@@ -260,7 +260,7 @@
 			</Grid.ColumnDefinitions>
 			<Label Margin="10,0,10,0" TextColor="Black" Text="Voice" FontSize="18" VerticalOptions="Center" />
 			<StackLayout Margin="10,0,0,0" Grid.Column="1" Orientation="Horizontal">
-				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="VoicePath"   HorizontalOptions="Center"  >
+				<ImageButton   Command="{Binding PickPhotoCommand}" CommandParameter="Voice"   HorizontalOptions="Center"  >
 					<ImageButton.Source>
 						<FontImageSource 
 							FontFamily="MaterialIconsRegular"
@@ -279,7 +279,7 @@
 					</ImageButton.Source>
 				</ImageButton>
 			</StackLayout>
-			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.TelephoneBillPath}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
+			<Label  Grid.Column="2" TextColor="Black" LineBreakMode="HeadTruncation"  Text="{Binding EdiForm.Voice}"  HorizontalOptions="End" VerticalOptions="Center" Margin="10,0,10,0" />
 		</Grid>
 		<Button   Grid.Column="1" VerticalOptions="EndAndExpand" Text="Submit" BackgroundColor="#063289" Margin="20, 0, 20, 20"  HorizontalOptions="Fill"  Command="{Binding SubmitCommand}"/>
 	</StackLayout>
