--- a/BolWallet/Views/CreateEdiPage.xaml
+++ b/BolWallet/Views/CreateEdiPage.xaml
@@ -3,17 +3,15 @@
 	x:Class="BolWallet.Views.CreateEdiPage"
 	xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:controls="clr-namespace:DevExpress.Maui.Controls;assembly=DevExpress.Maui.Controls"
     xmlns:controls1="clr-namespace:BolWallet.Controls"
     xmlns:converters="http://schemas.microsoft.com/dotnet/2022/maui/toolkit"
-    xmlns:editors="clr-namespace:DevExpress.Maui.Editors;assembly=DevExpress.Maui.Editors"
     xmlns:localConverters="clr-namespace:BolWallet.Converters"
     xmlns:models="clr-namespace:BolWallet.Models"
     xmlns:helpers="clr-namespace:BolWallet.Helpers"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
 	xmlns:local="clr-namespace:BolWallet;assembly=BolWallet"
     x:Name="This"
-    Title="Create your Edi"
+    Title="Create your Edit"
     x:DataType="viewModels:CreateEdiViewModel"
     BackgroundColor="{DynamicResource SecondaryColor}">
 	<Grid>
