--- a/BolWallet/Views/UserPage.xaml
+++ b/BolWallet/Views/UserPage.xaml
@@ -1,25 +1,70 @@
-﻿<ContentPage x:Class="BolWallet.UserPage"
+﻿<ContentPage 
+    x:Class="BolWallet.Views.UserPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:viewModels="clr-namespace:BolWallet.ViewModels"
-    x:DataType="viewModels:MainViewModel"
+    x:DataType="viewModels:UserViewModel"
     BackgroundColor="{DynamicResource SecondaryColor}">
+
+    <ContentPage.ToolbarItems>
+        <ToolbarItem 
+            Text="Settings"
+            Command="{Binding NavigateToTSettingsPageCommand}"
+            Order="Secondary" 
+            Priority="0" />
+    </ContentPage.ToolbarItems>
+
     <ScrollView>
         <Grid
-                Padding="{OnPlatform iOS='30,60,30,30',
-                                     Default='30'}"
-                RowDefinitions="Auto,Auto,*"
-                RowSpacing="25">
+            Padding="{OnPlatform iOS='30,60,30,30',
+                                    Default='30'}"
+            RowDefinitions="Auto,Auto,Auto,Auto,*"
+            ColumnDefinitions="*,*"
+            RowSpacing="25"
+            ColumnSpacing="8">
 
             <Label
-                    Grid.Row="0"
-                    FontSize="32"
-                    Text="{Binding CodenameLabel}"/>
+                Grid.Row="0"
+                Grid.ColumnSpan="2"
+                FontSize="32"
+                HorizontalOptions="Center"
+                HorizontalTextAlignment="Center"
+                SemanticProperties.HeadingLevel="Level1"
+                Text="{Binding CodenameLabel}" />
 
             <Label
-                    Grid.Row="1"
-                    FontSize="32"
-                    Text="{Binding EdiLabel}"/>
+                Grid.Row="1"
+                Grid.ColumnSpan="2"
+                FontSize="16"
+                HorizontalOptions="Center"
+                HorizontalTextAlignment="Center"
+                Text="{Binding BolLabel}" />
+
+            <Label
+                Grid.Row="2"
+                Grid.ColumnSpan="2"
+                FontSize="16"
+                HorizontalOptions="Center"
+                HorizontalTextAlignment="Center"
+                Text="{Binding EdiLabel}" />
+            
+            <Button
+                Grid.Row="3"
+                Grid.Column="0"
+                Command="{Binding NavigateToTransaction1PageCommand}"
+                FontAttributes="Bold"
+                HorizontalOptions="Center"
+                FontSize="8"
+                Text="{Binding TransactionButton1Label}" />
+
+            <Button
+                Grid.Row="3"
+                Grid.Column="1"
+                Command="{Binding NavigateToTransaction2PageCommand}"
+                FontAttributes="Bold"
+                HorizontalOptions="Center"
+                FontSize="8"
+                Text="{Binding TransactionButton2Label}" />
 
         </Grid>
     </ScrollView>
