--- a/BolWallet/Controls/ExtendedTextEdit.xaml
+++ b/BolWallet/Controls/ExtendedTextEdit.xaml
@@ -9,7 +9,7 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <Frame Grid.Row="0" BorderColor="{Binding FocusedBorderColor, Source={x:Reference this}}" Padding="8,0,0,0" CornerRadius="5">
+            <Frame Grid.Row="0"  ZIndex="1" BorderColor="{Binding FocusedBorderColor, Source={x:Reference this}}" Padding="8,0,0,0" CornerRadius="5">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="Auto"/>
@@ -35,6 +35,7 @@
                        Unfocused="Handle_Unfocused" 
                        Focused="Handle_Focused"
                        TextTransform="{Binding TextTransform, Source={x:Reference this}}"
+                       ZIndex="2"
                        >
                         <Entry.GestureRecognizers>
                             <TapGestureRecognizer Tapped="TapGestureRecognizer_Tapped"
@@ -61,6 +62,7 @@ MaxLength, of type int, defines the maximum input length.
                     <Label x:Name="LabelTitle" 
                         Text="{Binding LabelText, Source={x:Reference this}}" 
                         TextColor="{Binding PlaceholderColor, Source={x:Reference this}}" 
+                        ZIndex="3"
                         BackgroundColor="White"
                         VerticalOptions="Center">
                         <Label.GestureRecognizers>
@@ -71,15 +73,17 @@ MaxLength, of type int, defines the maximum input length.
                         Text="{Binding EndIcon.Glyph, Source={x:Reference this}}"
                         TextColor="{Binding EndIconColor, Source={x:Reference this}}"
                         FontFamily="{Binding EndIcon.FontFamily, Source={x:Reference this}}"
-                        FontSize="{Binding EndIcon.Size, Source={x:Reference this}}" />
+                        FontSize="{Binding EndIcon.Size, Source={x:Reference this}}" 
+                        ZIndex="4"/>
                 </Grid>
             </Frame>
             <Label Grid.Row="1" 
                 Text="{Binding ErrorText, Source={x:Reference this}}" 
                 IsVisible="{Binding HasError, Source={x:Reference this}, Mode = OneWay}"
                 TextColor="{Binding ErrorColor, Source={x:Reference this}, Mode = OneWay}"
+                BackgroundColor="White"
                 VerticalOptions="Center" 
-                HorizontalOptions="StartAndExpand" />
+                HorizontalOptions="FillAndExpand" />
         </Grid>
 
     </ContentView.Content>
