Implement TwoWay data binding and secure user data storage

--- a/BolWallet/Views/CreateCodenamePage.xaml
+++ b/BolWallet/Views/CreateCodenamePage.xaml
@@ -252,7 +252,7 @@
                 LabelText="Generated codename"
                 Tap="OnTapCopy"
                 NumberOfTapsRequired="1"
-                Text="{Binding Codename}"
+                Text="{Binding Codename, Mode=TwoWay}"
                 FontSize="15">
                 <controls1:ExtendedTextEdit.IsEnabled>
                     <MultiBinding Converter="{StaticResource AllTrueConverter}">
