Incorporate functionality for certification fees to enable account opening

--- a/BolWallet/Views/CertifyPage.xaml
+++ b/BolWallet/Views/CertifyPage.xaml
@@ -6,8 +6,44 @@
              Title="Certify Your Account"
 			 BackgroundColor="{DynamicResource SecondaryColor}"
 			 NavigationPage.HasBackButton="False">
-	
-	<StackLayout VerticalOptions="CenterAndExpand" Spacing="15" Padding="10" >
+
+	<StackLayout  Spacing="15" Padding="10" >
+		<Label
+		Text="Code Name"
+		FontSize="18"
+		TextColor="DarkSlateBlue" />
+
+		<Frame BackgroundColor="WhiteSmoke" Padding="10">
+			<Label Text="{Binding BolAccount.CodeName}" TextColor="Black">
+				<Label.GestureRecognizers>
+					<TapGestureRecognizer Tapped="OnTapCopy"/>
+				</Label.GestureRecognizers>
+			</Label>
+		</Frame>
+		<Label
+		Text="Total Balance"
+		FontSize="18"
+		TextColor="DarkSlateBlue" />
+
+		<Frame BackgroundColor="WhiteSmoke" Padding="10">
+			<Label Text="{Binding BolAccount.TotalBalance,Mode=TwoWay}" TextColor="Black">
+				<Label.GestureRecognizers>
+					<TapGestureRecognizer Tapped="OnTapCopy"/>
+				</Label.GestureRecognizers>
+			</Label>
+		</Frame>
+		<Label
+		Text="Account Status"
+		FontSize="18"
+		TextColor="DarkSlateBlue" />
+
+		<Frame BackgroundColor="WhiteSmoke" Padding="10">
+			<Label Text="{Binding BolAccount.AccountStatus}" TextColor="Black">
+				<Label.GestureRecognizers>
+					<TapGestureRecognizer Tapped="OnTapCopy"/>
+				</Label.GestureRecognizers>
+			</Label>
+		</Frame>
 		<Button 
 		Text="Select Mandatory Certifiers"
 		BackgroundColor="DarkSlateBlue"
@@ -30,6 +66,7 @@
 			</CollectionView.ItemTemplate>
 		</CollectionView>
 
+		<Entry Placeholder="Paste Certifier Codename" Text="{Binding CertifierCodename, Mode=TwoWay}" PlaceholderColor="Black" BackgroundColor="#EDF2F7" TextColor="Black" Margin="0,0,0,10" />
 
 		<Button 
 		Text="{Binding Certifications, StringFormat='Request Certification No.{0} out of 2'}"
@@ -37,7 +74,12 @@
 		TextColor="White"
 		Command="{Binding RequestCertificationCommand}"	CommandParameter="{Binding CertifierCodename}"/>
 
-		<Entry Placeholder="Paste Certifier Codename" Text="{Binding CertifierCodename, Mode=TwoWay}" PlaceholderColor="Black" WidthRequest="400"  HeightRequest="50" BackgroundColor="#EDF2F7" TextColor="Black" Margin="0,0,0,10" />
+		<Button 
+		IsVisible="{Binding IsCertified}"
+		Text="Pay Certification Fees"
+		BackgroundColor="DarkSlateBlue"
+		TextColor="White"
+		Command="{Binding PayCertificationFeesCommand}"	/>
 
 	</StackLayout>
 
